--- a/gateway.properties
+++ b/gateway.properties
@@ -17,8 +17,8 @@ zuul.routes.discovery.sensitive-headers=Set-Cookie,Authorization
 
 hystrix.command.discovery.execution.isolation.thread.timeoutInMilliseconds=600000
 
-management.security.enabled=false
-endpoints.sensitive=false
-endpoints.mappings.sensitive=false
+management.security.enabled=true
+endpoints.sensitive=true
+endpoints.mappings.sensitive=true
 
 http.mappers.json-pretty-print=true
