--- a/micro-service-authentication.properties
+++ b/micro-service-authentication.properties
@@ -1,7 +1,7 @@
 com.tomcat.apr=false
 
 server.port=${port:9191}
-spring.application.name=auth
+spring.application.name=micro-service-authentication
 
 spring.cloud.client.hostname=localhost
 
