--- a/gateway.properties
+++ b/gateway.properties
@@ -17,7 +17,7 @@ zuul.routes.discovery.sensitive-headers=Set-Cookie,Authorization
 
 hystrix.command.discovery.execution.isolation.thread.timeoutInMilliseconds=600000
 
-management.security.enabled=false
+management.security.enabled=true
 endpoints.sensitive=false
 endpoints.mappings.sensitive=false
 
