--- a/micro-service-master.properties
+++ b/micro-service-master.properties
@@ -1,7 +1,7 @@
 com.tomcat.apr=false
 
 server.port=${port:9090}
-spring.application.name=micro-service-master
+spring.application.name=master
 
 spring.cloud.client.hostname=localhost
 
