--- a/micro-service-authentication.properties
+++ b/micro-service-authentication.properties
@@ -8,9 +8,9 @@ spring.cloud.client.hostname=localhost
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka,http://127.0.0.1:8762/eureka
 eureka.instance.preferIpAddress=true
 
-management.security.enabled=true
-endpoints.sensitive=true
-endpoints.mappings.sensitive=true
+management.security.enabled=false
+endpoints.sensitive=false
+endpoints.mappings.sensitive=false
 
 http.mappers.json-pretty-print=true
 
