--- a/micro-service-authentication.properties
+++ b/micro-service-authentication.properties
@@ -60,6 +60,7 @@ spring.jta.transaction-manager-id=transactionManager
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.connection.provider_class=org.hibernate.hikaricp.internal.HikariCPConnectionProvider
 
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 entitymanager.packagesToScan=com.microservice.model
 
 flyway.locations=classpath:db/migration/{vendor}
