--- a/micro-service-authentication.properties
+++ b/micro-service-authentication.properties
@@ -23,7 +23,7 @@ server.compression.mime-types=text/css,text/html,text/xml,application/xhtml+xml,
 server.session.persistent=true
 
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.jdbcUrl=jdbc:mysql://127.0.0.1:3306/microservice_db?useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.jdbcUrl=jdbc:mysql://127.0.0.1:3306/development_db?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=jcashplay
 
