--- a/gateway.properties
+++ b/gateway.properties
@@ -13,7 +13,7 @@ eureka.instance.leaseRenewalIntervalInSeconds=1
 eureka.instance.leaseExpirationDurationInSeconds=2
 
 zuul.routes.discovery.path=/discovery/**
-zuul.routes.discovery.sensitive-headers=Set-Cookie,Authorization
+#zuul.routes.discovery.sensitive-headers=Set-Cookie,Authorization
 
 hystrix.command.discovery.execution.isolation.thread.timeoutInMilliseconds=600000
 
