--- a/gateway.properties
+++ b/gateway.properties
@@ -4,7 +4,8 @@ spring.application.name=gateway
 
 spring.cloud.client.hostname=localhost
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka,http://127.0.0.1:8762/eureka
- 
+
+ribbon.eureka.enabled=false
 eureka.client.region=default
 eureka.client.registryFetchIntervalSeconds=5
 
@@ -16,8 +17,8 @@ zuul.routes.discovery.sensitive-headers=Set-Cookie,Authorization
 
 hystrix.command.discovery.execution.isolation.thread.timeoutInMilliseconds=600000
 
-management.security.enabled=false
-endpoints.sensitive=false
-endpoints.mappings.sensitive=false
+management.security.enabled=true
+endpoints.sensitive=true
+endpoints.mappings.sensitive=true
 
 http.mappers.json-pretty-print=true
