--- a/gateway.properties
+++ b/gateway.properties
@@ -3,6 +3,8 @@ server.port=8763
 spring.application.name=gateway
 
 spring.cloud.client.hostname=localhost
+spring.cloud.gateway
+
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka,http://127.0.0.1:8762/eureka
 
 eureka.client.region=default
@@ -10,6 +12,8 @@ eureka.client.registryFetchIntervalSeconds=5
 
 eureka.instance.leaseRenewalIntervalInSeconds=1
 eureka.instance.leaseExpirationDurationInSeconds=2
+
+ribbon.eureka.enabled=false
 
 zuul.routes.discovery.path=/discovery/**
 zuul.routes.discovery.sensitive-headers=Set-Cookie,Authorization
