--- a/gateway.properties
+++ b/gateway.properties
@@ -13,7 +13,7 @@ eureka.client.registryFetchIntervalSeconds=5
 eureka.instance.leaseRenewalIntervalInSeconds=1
 eureka.instance.leaseExpirationDurationInSeconds=2
 
-ribbon.eureka.enabled=true
+ribbon.eureka.enabled=false
 
 zuul.routes.discovery.path=/discovery/**
 zuul.routes.discovery.sensitive-headers=Set-Cookie,Authorization
