--- a/micro-service-authentication.properties
+++ b/micro-service-authentication.properties
@@ -8,6 +8,10 @@ spring.cloud.client.hostname=localhost
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka,http://127.0.0.1:8762/eureka
 eureka.instance.preferIpAddress=true
 
+ribbon.eureka.enabled=false
+ribbon.eureka.listOfServers=127.0.0.1:876,127.0.0.1:8762
+ribbon.eureka.ServerListRefreshInterval=15000
+
 management.security.enabled=false
 endpoints.sensitive=false
 endpoints.mappings.sensitive=false
