--- a/micro-service-master.properties
+++ b/micro-service-master.properties
@@ -1,5 +1,3 @@
-com.tomcat.apr=false
-
 server.port=${port:9090}
 spring.application.name=master
 
@@ -8,9 +6,9 @@ spring.cloud.client.hostname=localhost
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka,http://127.0.0.1:8762/eureka
 eureka.instance.preferIpAddress=true
 
-ribbon.eureka.enabled=false
-ribbon.eureka.listOfServers=127.0.0.1:876,127.0.0.1:8762
-ribbon.eureka.ServerListRefreshInterval=15000
+#ribbon.eureka.enabled=false
+#ribbon.eureka.listOfServers=127.0.0.1:876,127.0.0.1:8762
+#ribbon.eureka.ServerListRefreshInterval=15000
 
 management.security.enabled=false
 endpoints.sensitive=false
