--- a/discovery.yaml
+++ b/discovery.yaml
@@ -56,15 +56,15 @@ eureka:
     
 ---
 
-#spring:
-#    profiles: discovery2
-#
-#server:
-#    port: 8762
-#
-#eureka:
-#    client:
-#        registerWithEureka: true
-#        fetchRegistry: false
-#        serviceUrl:
-#            defaultZone: http://127.0.0.1:8761/eureka/
+spring:
+    profiles: discovery2
+
+server:
+    port: 8762
+
+eureka:
+    client:
+        registerWithEureka: true
+        fetchRegistry: false
+        serviceUrl:
+            defaultZone: http://127.0.0.1:8761/eureka/
