--- a/micro-service-master.properties
+++ b/micro-service-master.properties
@@ -3,18 +3,17 @@ spring.application.name=master
 
 spring.cloud.client.hostname=localhost
 
-eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka/
-#  ,http://127.0.0.1:8762/eureka
-#eureka.instance.leaseRenewalIntervalInSeconds=10
-#eureka.instance.metadataMap.instanceId=http://127.0.0.1:9090,http://127.0.0.1:9191
-#eureka.instance.preferIpAddress=true
+eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka,http://127.0.0.1:8762/eureka
+eureka.instance.leaseRenewalIntervalInSeconds=10
+eureka.instance.metadataMap.instanceId=http://127.0.0.1:9090,http://127.0.0.1:9191
+eureka.instance.preferIpAddress=true
 
-#management.security.enabled=false
-#endpoints.restart.enabled=true
-#endpoints.shutdown.enabled=true
-#endpoints.health.sensitive=false
-#endpoints.sensitive=false
-#endpoints.mappings.sensitive=false
+management.security.enabled=false
+endpoints.restart.enabled=true
+endpoints.shutdown.enabled=true
+endpoints.health.sensitive=false
+endpoints.sensitive=false
+endpoints.mappings.sensitive=false
 
 http.mappers.json-pretty-print=true
 
