--- a/micro-service-master.properties
+++ b/micro-service-master.properties
@@ -5,7 +5,7 @@ spring.cloud.client.hostname=localhost
 
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka,http://127.0.0.1:8762/eureka
 eureka.instance.leaseRenewalIntervalInSeconds=10
-eureka.instance.metadataMap.instanceId=http://127.0.0.1:9090,http://127.0.0.1:9191
+eureka.instance.metadataMap.instanceId=${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${server.port}}}
 eureka.instance.preferIpAddress=true
 
 management.security.enabled=false
