--- a/discovery.yaml
+++ b/discovery.yaml
@@ -10,7 +10,7 @@ spring:
 
 eureka:
     client:
-        registerWithEureka: true
+        registerWithEureka: false
         fetchRegistry: false
         healthcheck:
             enabled: true
