--- a/micro-service-master.properties
+++ b/micro-service-master.properties
@@ -1,6 +1,6 @@
-server.port=${port:9090}
-spring.application.name=master
+server.port=9090
 
+spring.application.name=master
 spring.cloud.client.hostname=localhost
 
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka/
