--- a/micro-service-master.properties
+++ b/micro-service-master.properties
@@ -1,16 +1,18 @@
-server.port=9090
+server.port=${port:9090}
+spring.application.name=master
 
-eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka/
+spring.cloud.client.hostname=localhost
+
+eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka,http://127.0.0.1:8762/eureka
+eureka.instance.leaseRenewalIntervalInSeconds=10
 eureka.instance.metadataMap.instanceId=${spring.application.name}:${random.value}
+eureka.instance.preferIpAddress=true
 
 management.security.enabled=false
 endpoints.sensitive=false
 endpoints.mappings.sensitive=false
 
 http.mappers.json-pretty-print=true
-
-mybatis.configuration.mapUnderscoreToCamelCase=false
-mybatis.configuration.autoMappingBehavior=full
 
 server.compression.enabled=false
 server.compression.min-response-size=1024
