--- a/micro-service-master.properties
+++ b/micro-service-master.properties
@@ -5,7 +5,7 @@ spring.cloud.client.hostname=localhost
 
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka,http://127.0.0.1:8762/eureka
 eureka.instance.leaseRenewalIntervalInSeconds=10
-#eureka.instance.metadataMap.instanceId=${spring.application.name}:${random.value}
+eureka.instance.metadataMap.instanceId=${spring.application.name}:${random.value}
 eureka.instance.preferIpAddress=true
 
 management.security.enabled=false
