--- a/micro-service-master.properties
+++ b/micro-service-master.properties
@@ -3,9 +3,10 @@ spring.application.name=master
 
 spring.cloud.client.hostname=localhost
 
-eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka,http://127.0.0.1:8762/eureka
+eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka
+#  http://127.0.0.1:8762/eureka
+eureka.instance.instanceId=${spring.application.name}:${random.value}
 eureka.instance.leaseRenewalIntervalInSeconds=10
-eureka.instance.metadataMap.instanceId=${spring.application.name}:${random.value}
 eureka.instance.preferIpAddress=true
 
 management.security.enabled=false
