--- a/discovery.yaml
+++ b/discovery.yaml
@@ -10,7 +10,9 @@ spring:
 
 eureka:
     client:
-        registerWithEureka: true
+        serviceUrl:
+            defaultZone: http://localhost:8761/eureka
+        registerWithEureka: false
         fetchRegistry: false
         healthcheck:
             enabled: true
@@ -41,30 +43,30 @@ http:
         
 ---
 
-spring:
-    profiles: discovery1
-
-server:
-    port: 8761
-
-eureka:
-    client:
-        registerWithEureka: true
-        fetchRegistry: false
-        serviceUrl:
-            defaultZone: http://127.0.0.1:8762/eureka/
-
----
-
-spring:
-    profiles: discovery2
-
-server:
-    port: 8762
-
-eureka:
-    client:
-        registerWithEureka: true
-        fetchRegistry: false
-        serviceUrl:
-            defaultZone: http://127.0.0.1:8761/eureka/
+#spring:
+#    profiles: discovery1
+#
+#server:
+#    port: 8761
+#
+#eureka:
+#    client:
+#        registerWithEureka: true
+#        fetchRegistry: false
+#        serviceUrl:
+#            defaultZone: http://127.0.0.1:8762/eureka/
+#
+#---
+#
+#spring:
+#    profiles: discovery2
+#
+#server:
+#    port: 8762
+#
+#eureka:
+#    client:
+#        registerWithEureka: true
+#        fetchRegistry: false
+#        serviceUrl:
+#            defaultZone: http://127.0.0.1:8761/eureka/
