--- a/micro-service-master.properties
+++ b/micro-service-master.properties
@@ -4,7 +4,7 @@ spring.application.name=master
 spring.cloud.client.hostname=localhost
 
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka/,http://127.0.0.1:8762/eureka/
-eureka.instance.instanceId=${spring.application.name}:${random.value}
+eureka.instance.instanceId=${spring.application.name}:${random.value},${spring.application.name}:${random.value}
 eureka.instance.leaseRenewalIntervalInSeconds=10
 eureka.instance.preferIpAddress=true
 
