--- a/discovery.yaml
+++ b/discovery.yaml
@@ -10,12 +10,12 @@ spring:
 
 eureka:
     client:
-        registerWithEureka: false
+        registerWithEureka: true
         fetchRegistry: false
         healthcheck:
             enabled: true
     server:
-        enableSelfPreservation: true
+        enableSelfPreservation: false
         renewalPercentThreshold: 0.1
         waitTimeInMsWhenSyncEmpty: 0
     instance:
