--- a/micro-service-master.properties
+++ b/micro-service-master.properties
@@ -2,8 +2,11 @@ server.port=${port:9090}
 spring.application.name=master
 
 spring.cloud.client.hostname=localhost
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.serviceId=config-server
 
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka/,http://127.0.0.1:8762/eureka/
+eureka.instance.metadataMap.instanceId=${spring.application.name}:${spring.application.instance_id:${random.value}}
 eureka.instance.preferIpAddress=true
 
 management.security.enabled=false
