--- a/micro-service-master.properties
+++ b/micro-service-master.properties
@@ -65,7 +65,7 @@ flyway.locations=classpath:db/migration/{vendor}
 flyway.baselineOnMigrate=true
 flyway.validateOnMigrate=false
 
-logging.level.root=WARN
-logging.level.org.springframework.web=WARN
-logging.level.org.hibernate=WARN
-#spring.output.ansi.enabled=true
+#logging.level.root=WARN
+#logging.level.org.springframework.web=WARN
+#logging.level.org.hibernate=WARN
+##spring.output.ansi.enabled=true
