--- a/gateway.properties
+++ b/gateway.properties
@@ -3,7 +3,9 @@ server.port=8763
 spring.application.name=gateway
 
 spring.cloud.client.hostname=localhost
-spring.cloud.gateway
+spring.cloud.gateway.routes.id=add_request_header_route
+spring.cloud.gateway.routes.uri=http://gateway.org
+spring.cloud.gateway.routes.filters=AddResponseHeader=Authorization
 
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka,http://127.0.0.1:8762/eureka
 
