--- a/gateway.properties
+++ b/gateway.properties
@@ -3,9 +3,6 @@ server.port=8763
 spring.application.name=gateway
 
 spring.cloud.client.hostname=localhost
-spring.cloud.gateway.routes.id=add_request_header_route
-spring.cloud.gateway.routes.uri=http://gateway.org
-spring.cloud.gateway.routes.filters=AddResponseHeader=Authorization
 
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka,http://127.0.0.1:8762/eureka
 
@@ -15,7 +12,9 @@ eureka.client.registryFetchIntervalSeconds=5
 eureka.instance.leaseRenewalIntervalInSeconds=1
 eureka.instance.leaseExpirationDurationInSeconds=2
 
+ribbon.eureka.enabled=false
 zuul.routes.discovery.path=/discovery/**
+zuul.routes.discovery.url=http://localhost:8090
 zuul.routes.discovery.sensitive-headers=Set-Cookie,Authorization
 
 hystrix.command.discovery.execution.isolation.thread.timeoutInMilliseconds=600000
