--- a/micro-service-master.properties
+++ b/micro-service-master.properties
@@ -2,8 +2,6 @@ server.port=${port:9090}
 spring.application.name=master
 
 spring.cloud.client.hostname=localhost
-spring.cloud.config.discovery.enabled=true
-spring.cloud.config.discovery.serviceId=config-server
 
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka,http://127.0.0.1:8762/eureka
 eureka.instance.preferIpAddress=true
@@ -13,6 +11,9 @@ endpoints.sensitive=false
 endpoints.mappings.sensitive=false
 
 http.mappers.json-pretty-print=true
+
+mybatis.configuration.mapUnderscoreToCamelCase=false 
+mybatis.configuration.autoMappingBehavior=full
 
 server.compression.enabled=false
 server.compression.min-response-size=1024
@@ -39,9 +40,9 @@ spring.datasource.validationTimeout=30000
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
-spring.jpa.generate-ddl=true
-spring.jpa.properties.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.generate-ddl=false
+spring.jpa.properties.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.hbm2ddl.auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
@@ -61,10 +62,10 @@ entitymanager.packagesToScan=com.microservice.model
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
 flyway.locations=classpath:db/migration/{vendor}
-flyway.baselineOnMigrate=true
+flyway.baselineOnMigrate=true 
 flyway.validateOnMigrate=false
 
-#logging.level.root=WARN
-#logging.level.org.springframework.web=WARN
-#logging.level.org.hibernate=WARN
-##spring.output.ansi.enabled=true
+logging.level.root=WARN
+logging.level.org.springframework.web=WARN
+logging.level.org.hibernate=WARN
+#spring.output.ansi.enabled=true
