--- a/micro-service-authentication.properties
+++ b/micro-service-authentication.properties
@@ -1,7 +1,7 @@
 server.port=${port:9191}
 spring.application.name=authentication
 
-spring.cloud.client.hostname=localhost
+spring.cloud.client.hostname=127.0.0.1
 
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8282/eureka,http://127.0.0.1:8383/eureka
 eureka.instance.preferIpAddress=true
