--- a/micro-service-master.properties
+++ b/micro-service-master.properties
@@ -1,19 +1,18 @@
 server.port=${port:9090}
 spring.application.name=master
+spring.cloud.client.hostname=127.0.0.1
 
-spring.cloud.client.hostname=localhost
+eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8282/eureka/
+eureka.instance.leaseRenewalIntervalInSeconds=10
+eureka.instance.metadataMap.instanceId=${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${server.port}}}
 
-eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8282/eureka,http://127.0.0.1:8383/eureka
-eureka.instance.preferIpAddress=true
-
-ribbon.eureka.enabled=false
-ribbon.eureka.listOfServers=127.0.0.1:9090,127.0.0.1:9191
-ribbon.eureka.ServerListRefreshInterval=15000
-
-
-management.security.enabled=false
 endpoints.sensitive=false
 endpoints.mappings.sensitive=false
+endpoints.restart.enabled=true
+endpoints.shutdown.enabled=true
+endpoints.health.sensitive=false
+
+management.security.enabled=false
 
 http.mappers.json-pretty-print=true
 
