--- a/micro-service-master.properties
+++ b/micro-service-master.properties
@@ -1,18 +1,12 @@
 server.port=${port:9090}
 spring.application.name=master
-spring.cloud.client.hostname=127.0.0.1
+spring.cloud.client.hostname=localhost
 
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8282/eureka/
-eureka.instance.leaseRenewalIntervalInSeconds=10
-eureka.instance.metadataMap.instanceId=${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${server.port}}}
-
-endpoints.sensitive=false
-endpoints.mappings.sensitive=false
-endpoints.restart.enabled=true
-endpoints.shutdown.enabled=true
-endpoints.health.sensitive=false
 
 management.security.enabled=false
+endpoints.sensitive=false
+endpoints.mappings.sensitive=false
 
 http.mappers.json-pretty-print=true
 
