--- a/micro-service-authentication.properties
+++ b/micro-service-authentication.properties
@@ -1,23 +1,16 @@
 server.port=${port:9191}
 spring.application.name=authentication
 
-spring.cloud.client.hostname=127.0.0.1
+spring.cloud.client.hostname=localhost
 
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8282/eureka,http://127.0.0.1:8383/eureka
 eureka.instance.preferIpAddress=true
-
-#ribbon.eureka.enabled=false
-#ribbon.eureka.listOfServers=127.0.0.1:876,127.0.0.1:8762
-#ribbon.eureka.ServerListRefreshInterval=15000
 
 management.security.enabled=false
 endpoints.sensitive=false
 endpoints.mappings.sensitive=false
 
 http.mappers.json-pretty-print=true
-
-mybatis.configuration.mapUnderscoreToCamelCase=false 
-mybatis.configuration.autoMappingBehavior=full
 
 server.compression.enabled=false
 server.compression.min-response-size=1024
