--- a/micro-service-master.properties
+++ b/micro-service-master.properties
@@ -1,8 +1,10 @@
 server.port=${port:9090}
 spring.application.name=master
+
 spring.cloud.client.hostname=localhost
 
-eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8282/eureka/
+eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8282/eureka,http://127.0.0.1:8383/eureka
+eureka.instance.preferIpAddress=true
 
 management.security.enabled=false
 endpoints.sensitive=false
