--- a/discovery.yaml
+++ b/discovery.yaml
@@ -15,7 +15,7 @@ eureka:
         healthcheck:
             enabled: true
     server:
-        enableSelfPreservation: false
+        enableSelfPreservation: true
         renewalPercentThreshold: 0.1
         waitTimeInMsWhenSyncEmpty: 0
     instance:
@@ -34,12 +34,13 @@ endpoints:
     mappings:
         sensitive: false
 
+
 http:
     mappers:
         json-pretty-print: true
 
+---
 
-#-----------------------------------------------------------------------------------------------------------------------
 spring:
     profiles: discovery1
 
@@ -53,7 +54,8 @@ eureka:
         serviceUrl:
             defaultZone: http://127.0.0.1:8282/eureka/
 
-#-----------------------------------------------------------------------------------------------------------------------
+---
+
 spring:
     profiles: discovery2
 
