--- a/gateway.properties
+++ b/gateway.properties
@@ -3,6 +3,7 @@ server.port=8080
 spring.application.name=gateway
 
 spring.cloud.client.hostname=localhost
+spring.cloud.gateway
 
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8282/eureka,http://127.0.0.1:8383/eureka
 
