--- a/gateway.properties
+++ b/gateway.properties
@@ -5,7 +5,7 @@ spring.application.name=gateway
 spring.cloud.client.hostname=localhost
 spring.cloud.gateway
 
-eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8282/eureka,http://127.0.0.1:8383/eureka
+eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8282/eureka/,http://127.0.0.1:8383/eureka/
 
 eureka.client.region=default
 eureka.client.registryFetchIntervalSeconds=5
