--- a/micro-service-authentication.properties
+++ b/micro-service-authentication.properties
@@ -3,7 +3,7 @@ spring.application.name=authentication
 
 spring.cloud.client.hostname=localhost
 
-eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8282/eureka,http://127.0.0.1:8383/eureka
+eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka,http://127.0.0.1:8762/eureka
 eureka.instance.preferIpAddress=true
 
 management.security.enabled=false
@@ -37,9 +37,9 @@ spring.datasource.validationTimeout=30000
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
-spring.jpa.generate-ddl=true
-spring.jpa.properties.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.generate-ddl=false
+spring.jpa.properties.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.hbm2ddl.auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
@@ -55,8 +55,8 @@ spring.jta.transaction-manager-id=transactionManager
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.connection.provider_class=org.hibernate.hikaricp.internal.HikariCPConnectionProvider
 
-spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 entitymanager.packagesToScan=com.microservice.model
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
 flyway.locations=classpath:db/migration/{vendor}
 flyway.baselineOnMigrate=true 
