--- a/gateway.properties
+++ b/gateway.properties
@@ -14,9 +14,12 @@ eureka.instance.leaseRenewalIntervalInSeconds=1
 eureka.instance.leaseExpirationDurationInSeconds=2
 
 zuul.routes.discovery.path=/discovery/**
-zuul.routes.discovery.sensitive-headers=Set-Cookie,Authorization
+zuul.routes.discovery.sensitive-headers=Cookie,Set-Cookie
 
 hystrix.command.discovery.execution.isolation.thread.timeoutInMilliseconds=600000
+hystrix.command.default.fallback.isolation.semaphore.maxConcurrentRequests=100000
+hystrix.command.default.fallback.enabled=true
+hystrix.command.default.circuitBreaker.enabled=true
 
 management.security.enabled=false
 endpoints.sensitive=false
