--- a/gateway.properties
+++ b/gateway.properties
@@ -14,7 +14,7 @@ eureka.instance.leaseRenewalIntervalInSeconds=1
 eureka.instance.leaseExpirationDurationInSeconds=2
 
 zuul.routes.discovery.path=/discovery/**
-zuul.routes.discovery.sensitive-headers=Cookie,Set-Cookie
+#zuul.routes.discovery.sensitive-headers=Cookie,Set-Cookie,Authorization
 
 hystrix.command.discovery.execution.isolation.thread.timeoutInMilliseconds=600000
 hystrix.command.default.fallback.isolation.semaphore.maxConcurrentRequests=100000
