--- a/discovery.yaml
+++ b/discovery.yaml
@@ -1,5 +1,117 @@
 server:
     port: 8761
+#-----------------------------------------------------------------------------------------------------------------------
+spring:
+    application:
+        name: discovery
+    cloud:
+        client:
+            hostname: localhost
+#-----------------------------------------------------------------------------------------------------------------------
+eureka:
+    client:
+        registerWithEureka: false
+        fetchRegistry: false
+        healthcheck:
+            enabled: true
+    server:
+        enableSelfPreservation: true
+        renewalPercentThreshold: 0.1
+        waitTimeInMsWhenSyncEmpty: 0
+    instance:
+        registryFetchIntervalSeconds: 3600
+        leaseRenewalIntervalInSeconds: 3600
+        preferIpAddress: true
+    dashboard:
+        enabled: true
+#-----------------------------------------------------------------------------------------------------------------------
+management:
+    security:
+        enabled: false
+#-----------------------------------------------------------------------------------------------------------------------
+endpoints:
+    sensitive: false
+    mappings:
+        sensitive: false
+#-----------------------------------------------------------------------------------------------------------------------
+http:
+    mappers:
+        json-pretty-print: true
+#-----------------------------------------------------------------------------------------------------------------------
+
+---
+
+spring:
+    profiles: discovery1
+
+server:
+    port: 8761
+
+eureka:
+    client:
+        registerWithEureka: true
+        fetchRegistry: false
+        serviceUrl:
+            defaultZone: http://127.0.0.1:8761/eureka/
+        preferSameZoneEureka: true
+    instance:
+        metadataMap:
+            zone: zone1
+---
+
+spring:
+    profiles: discovery2
+
+server:
+    port: 8762
+
+eureka:
+    client:
+        registerWithEureka: true
+        fetchRegistry: false
+        serviceUrl:
+            defaultZone: http://127.0.0.1:8762/eureka/
+        preferSameZoneEureka: true
+    instance:
+        metadataMap:
+            zone: zone1
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+server:
+    port: 8761
 
 spring:
     application:
