--- a/gateway.yaml
+++ b/gateway.yaml
@@ -28,8 +28,8 @@ eureka:
         leaseExpirationDurationInSeconds: 2
 #-----------------------------------------------------------------------------------------------------------------------
 zuul:
-    forceOriginalQueryStringEncoding: true
-    ignoredServices: '*'
+#    forceOriginalQueryStringEncoding: true
+#    ignoredServices: '*'
     routes:
         discovery:
             path: /discovery/**
@@ -40,22 +40,22 @@ zuul:
 #            path: /discovery/**
 #            sensitive-headers: #Cookie,Set-Cookie,Authorization
 #-----------------------------------------------------------------------------------------------------------------------
-hystrix:
-    command:
-        myusers-service:
-            execution:
-                isolation:
-                    thread:
-                        timeoutInMilliseconds: 10000
-#-----------------------------------------------------------------------------------------------------------------------
-myusers-service:
-    ribbon:
-        NIWSServerListClassName: com.netflix.loadbalancer.ConfigurationBasedServerList
-        ListOfServers: http://google.co.id,http://google.com
-        ConnectTimeout: 1000
-        ReadTimeout: 3000
-        MaxTotalHttpConnections: 500
-        MaxConnectionsPerHost: 100
+#hystrix:
+#    command:
+#        myusers-service:
+#            execution:
+#                isolation:
+#                    thread:
+#                        timeoutInMilliseconds: 10000
+##-----------------------------------------------------------------------------------------------------------------------
+#myusers-service:
+#    ribbon:
+#        NIWSServerListClassName: com.netflix.loadbalancer.ConfigurationBasedServerList
+#        ListOfServers: http://google.co.id,http://google.com
+#        ConnectTimeout: 1000
+#        ReadTimeout: 3000
+#        MaxTotalHttpConnections: 500
+#        MaxConnectionsPerHost: 100
 #-----------------------------------------------------------------------------------------------------------------------
 management:
     security:
