--- a/gateway.yaml
+++ b/gateway.yaml
@@ -1,6 +1,6 @@
 server:
     port: 8081
-#-----------------------------------------------------------------------------------------------------------------------
+
 spring:
     application:
         name: gateway
@@ -14,19 +14,19 @@ spring:
 #              uri: http://development.org
 #              predicates:
 #              - Path=/get
-#-----------------------------------------------------------------------------------------------------------------------
+
 eureka:
     client:
-        registerWithEureka: true
-        fetchRegistry: false
+#        registerWithEureka: true
+#        fetchRegistry: false
         serviceUrl:
             defaultZone: http://127.0.0.1:8761/eureka,http://127.0.0.1:8762/eureka
-        region: default
-        registryFetchIntervalSeconds: 5
-    instance:
-        leaseRenewalIntervalInSeconds: 1
-        leaseExpirationDurationInSeconds: 2
-#-----------------------------------------------------------------------------------------------------------------------
+#        region: default
+#        registryFetchIntervalSeconds: 5
+#    instance:
+#        leaseRenewalIntervalInSeconds: 1
+#        leaseExpirationDurationInSeconds: 2
+
 zuul:
 #    forceOriginalQueryStringEncoding: true
 #    ignoredServices: '*'
@@ -39,7 +39,7 @@ zuul:
 #        discovery:
 #            path: /discovery/**
 #            sensitive-headers: #Cookie,Set-Cookie,Authorization
-#-----------------------------------------------------------------------------------------------------------------------
+
 #hystrix:
 #    command:
 #        myusers-service:
@@ -47,7 +47,7 @@ zuul:
 #                isolation:
 #                    thread:
 #                        timeoutInMilliseconds: 10000
-##-----------------------------------------------------------------------------------------------------------------------
+
 #myusers-service:
 #    ribbon:
 #        NIWSServerListClassName: com.netflix.loadbalancer.ConfigurationBasedServerList
@@ -56,16 +56,16 @@ zuul:
 #        ReadTimeout: 3000
 #        MaxTotalHttpConnections: 500
 #        MaxConnectionsPerHost: 100
-#-----------------------------------------------------------------------------------------------------------------------
+
 management:
     security:
         enabled: false
-#-----------------------------------------------------------------------------------------------------------------------
+
 endpoints:
     sensitive: false
     mappings:
         sensitive: false
-#-----------------------------------------------------------------------------------------------------------------------
+
 http:
     mappers:
         json-pretty-print: true
