--- a/gateway.properties
+++ b/gateway.properties
@@ -1,8 +1,9 @@
-server.port=8080
+server.port=8763
 
 spring.application.name=gateway
 
 spring.cloud.client.hostname=localhost
+spring.cloud.gateway
 
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka,http://127.0.0.1:8762/eureka
 
