--- a/asd.yaml
+++ b/asd.yaml
@@ -1,9 +1,9 @@
 server:
-    port: 8081
+    port: 8080
 
 spring:
     application:
-        name: gateway
+        name: gatewayas
     cloud:
         client:
             hostname: localhost
