--- a/gateway.yaml
+++ b/gateway.yaml
@@ -3,7 +3,7 @@ server:
 
 spring:
     application:
-        name: gatewayas
+        name: gateway
     cloud:
         client:
             hostname: localhost
