--- a/gateway.yaml
+++ b/gateway.yaml
@@ -31,7 +31,7 @@ zuul:
     forceOriginalQueryStringEncoding: true
     ignoredServices: '*'
     routes:
-        users:
+        discovery:
             path: /discovery/**
             sensitive-headers: Cookie,Set-Cookie,Authorization
             serviceId: myusers-service
