--- a/gateway.yaml
+++ b/gateway.yaml
@@ -45,7 +45,7 @@ hystrix:
             execution:
                 isolation:
                     thread:
-                        timeoutInMilliseconds: 10000
+                        timeoutInMilliseconds: ...
 
 myusers-service:
     ribbon:
