--- a/gateway.yaml
+++ b/gateway.yaml
@@ -12,7 +12,7 @@ spring:
                 - id: get
                   uri: http://development.org
                   predicates:
-                  - AddRequestHeader=Authorization, Bar
+                  - AddResponseHeader=Authorization
 
 eureka:
     client:
