--- a/gateway.yaml
+++ b/gateway.yaml
@@ -29,31 +29,31 @@ eureka:
         leaseExpirationDurationInSeconds: 2
 
 zuul:
-    forceOriginalQueryStringEncoding: true
-    ignoredServices: '*'
+#    forceOriginalQueryStringEncoding: true
+#    ignoredServices: '*'
     routes:
         discovery:
             discovery: /discovery/**
             sensitive-headers: Cookie,Set-Cookie,Authorization
-            serviceId: myusers-service
-            stripPrefix: true
+#            serviceId: myusers-service
+#            stripPrefix: true
 
-hystrix:
-    command:
-        myusers-service:
-            execution:
-                isolation:
-                    thread:
-                        timeoutInMilliseconds: ...
-
-myusers-service:
-    ribbon:
-        NIWSServerListClassName: com.netflix.loadbalancer.ConfigurationBasedServerList
-        ListOfServers: http://google.co.id,http://google.com
-        ConnectTimeout: 1000
-        ReadTimeout: 3000
-        MaxTotalHttpConnections: 500
-        MaxConnectionsPerHost: 100
+#hystrix:
+#    command:
+#        myusers-service:
+#            execution:
+#                isolation:
+#                    thread:
+#                        timeoutInMilliseconds: ...
+#
+#myusers-service:
+#    ribbon:
+#        NIWSServerListClassName: com.netflix.loadbalancer.ConfigurationBasedServerList
+#        ListOfServers: http://google.co.id,http://google.com
+#        ConnectTimeout: 1000
+#        ReadTimeout: 3000
+#        MaxTotalHttpConnections: 500
+#        MaxConnectionsPerHost: 100
 
 management:
     security:
