--- a/gateway.yaml
+++ b/gateway.yaml
@@ -7,12 +7,6 @@ spring:
     cloud:
         client:
             hostname: localhost
-        gateway:
-            routes:
-                - id: get
-                  uri: http://development.org
-                  filters:
-                  - AddResponseHeader=Authorization, Bar
 
 eureka:
     client:
@@ -30,7 +24,7 @@ zuul:
     routes:
         discovery:
             discovery: /discovery/**
-#            sensitive-headers: Cookie,Set-Cookie,Authorization
+            sensitive-headers: Cookie,Set-Cookie,Authorization
 
 management:
     security:
