--- a/discovery.yaml
+++ b/discovery.yaml
@@ -23,7 +23,7 @@ eureka:
         leaseRenewalIntervalInSeconds: 3600
         preferIpAddress: true
     dashboard:
-        enabled: true
+        enabled: false
 
 management:
     security:
@@ -34,6 +34,7 @@ endpoints:
     mappings:
         sensitive: false
 
+
 http:
     mappers:
         json-pretty-print: true
@@ -42,25 +43,28 @@ http:
 
 spring:
     profiles: discovery1
+
 server:
     port: 8761
+
 eureka:
     client:
         registerWithEureka: true
         fetchRegistry: false
         serviceUrl:
-            defaultZone: 'http://127.0.0.1:8761/eureka/'
+            defaultZone: http://127.0.0.1:8762/eureka/
 
 ---
 
 spring:
     profiles: discovery2
+
 server:
     port: 8762
+
 eureka:
     client:
         registerWithEureka: true
         fetchRegistry: false
         serviceUrl:
-            defaultZone: 'http://127.0.0.1:8762/eureka/'
-
+            defaultZone: http://127.0.0.1:8761/eureka/
