--- a/discovery.yaml
+++ b/discovery.yaml
@@ -15,7 +15,7 @@ eureka:
     healthcheck:
       enabled: true
   server:
-    enableSelfPreservation: false
+    enableSelfPreservation: true
     renewalPercentThreshold: 0.1
     waitTimeInMsWhenSyncEmpty: 0
   instance:
@@ -30,9 +30,9 @@ management:
     enabled: false
 
 endpoints:
-  sensitive: true
+  sensitive: false
   mappings:
-    sensitive: true
+    sensitive: false
 
 
 http:
